--- a/sec-5-optimisation.tex
+++ b/sec-5-optimisation.tex
@@ -1301,6 +1301,7 @@ of the input arguments.
 %
 \begin{lstlisting}[style=haskell
     ,name=zipWithD
+    ,label=lst:zipWithD
     ,caption={[Fused definition of the \code{zipWith} operation]}]
 zipWithD :: (Shape sh, Elt a, Elt b, Elt c)
          => PreFun     acc aenv (a -> b -> c)
