--- a/thesis.bib
+++ b/thesis.bib
@@ -1,4 +1,4 @@
-%% Created using Papers on Wed, 19 Jun 2013.
+%% Created using Papers on Sat, 06 Jul 2013.
 %% http://papersapp.com/papers/
 
 @book{Altenkirch:2003kz,
@@ -125,10 +125,13 @@ pages = {157--166},
 month = mar
 }
 
-@proceedings{Chafi:2010,
-title = {{Language Virtualization for Heterogeneous Parallel Computing}},
+@article{Chafi:2010up,
+author = {Chafi, Hassan and DeVito, Zach and Moors, Adriaan and Rompf, Tiark and Sujeeth, Arvind K and Hanrahan, Pat and Odersky, Martin and Olukotun, Kunle},
+title = {{Language virtualization for heterogeneous parallel computing}},
 year = {2010},
-address = {Stanford University}
+volume = {45},
+number = {10},
+pages = {835--847}
 }
 
 @article{ThrustAParallelT:ub,
@@ -203,17 +206,6 @@ publisher = { ACM  Request Permissions},
 month = sep
 }
 
-@incollection{McBride:2005jv,
-author = {McBride, Conor},
-title = {{Epigram: Practical Programming with Dependent Types}},
-booktitle = {Advanced Functional Programming},
-year = {2005},
-editor = {Vene, Varmo and Uustalu, Tarmo},
-pages = {130--170},
-organization = {School of Computer Science and Information Technology, University of Nottingham, Jubilee Campus, Wollaton Road, Nottingham NG8 1BB United Kingdom},
-publisher = {Springer Berlin / Heidelberg}
-}
-
 @article{Pfenning:1988,
 author = {Pfenning, F. and Elliot, C.},
 title = {{Higher-order abstract syntax}},
@@ -280,7 +272,7 @@ address = {London, UK, UK}
 }
 
 @inproceedings{Skillcorn:1994,
-author = {Skillcorn, D. B. and Cai, Wentong},
+author = {Skillicorn, D. B. and Cai, Wentong},
 title = {{Equational code generation: implementing categorical data types for data parallelism}},
 booktitle = {TENCON `94: Proceedings of the 9th IEEE conference on the Frontiers of Computer Technology},
 year = {1994},
@@ -307,12 +299,10 @@ year = {1993}
 author = {Chlipala, Adam},
 title = {{Parametric higher-order abstract syntax for mechanized semantics}},
 booktitle = {ICFP '08: Proceeding of the 13th ACM SIGPLAN international conference on Functional programming},
-publisher = { ACM  Request Permissions}
-}
-
-@book{Anonymous:MN3zTyWw,
-title = {{Advanced Functional Programming}},
-publisher = {Springer Berlin / Heidelberg}
+year = {2008},
+pages = {143--156},
+publisher = { ACM  Request Permissions},
+month = sep
 }
 
 @book{Muchnick:1997wv,
@@ -451,7 +441,10 @@ month = sep
 
 @article{Thiemann:Es80Kvtr,
 author = {Thiemann, Peter and Chakravarty, Manuel M T},
-title = {{Agda Meets Accelerate}}
+title = {{Agda Meets Accelerate}},
+journal = {IFL'12: Proceedings of the 24th international conference on Implementation and Application of Functional Languages},
+year = {2012},
+month = aug
 }
 
 @techreport{Kessenich:2006,
@@ -491,6 +484,15 @@ number = {6096},
 pages = {446--449},
 month = dec,
 annote = {10.1038/324446a0}
+}
+
+@inproceedings{Rompf:2013er,
+author = {Rompf, Tiark and Sujeeth, Arvind K and Amin, Nada and Brown, Kevin J and Jovanovic, Vojin and Lee, HyoukJoong and Jonnalagedda, Manohar and Olukotun, Kunle and Odersky, Martin},
+title = {{Optimizing data structures in high-level programs: new directions for extensible compilers based on staging}},
+booktitle = {POPL '13: Proceedings of the 40th annual ACM SIGPLAN-SIGACT symposium on Principles of programming languages},
+year = {2013},
+publisher = { ACM  Request Permissions},
+month = jan
 }
 
 @book{Haskell:1998,
@@ -553,7 +555,7 @@ pages = {135--146}
 }
 
 @inproceedings{Chatterjee:1990vj,
-author = {Chatterjee, Siddhartha and Blelloch, G E and Zagha, Marco},
+author = {Chatterjee, Siddhartha and Blelloch, Guy E. and Zagha, Marco},
 title = {{Scan primitives for vector computers}},
 booktitle = {Supercomputing '90., Proceedings of},
 year = {1990},
@@ -654,12 +656,14 @@ number = {7},
 pages = {755--757}
 }
 
-@techreport{Appel:1994ws,
-author = {Appel, Andrew W and Jim, Trevor},
-title = {{Making Lambda Calculus Smaller, Faster}},
-year = {1994},
-number = {CS-TR-477-94},
-month = nov
+@inproceedings{Mainland:2007bl,
+author = {Mainland, Geoffrey},
+title = {{Why it's nice to be quoted}},
+booktitle = {the ACM SIGPLAN workshop},
+year = {2007},
+pages = {73},
+publisher = {ACM Press},
+address = {New York, New York, USA}
 }
 
 @inproceedings{Meijer:1991,
@@ -672,10 +676,12 @@ publisher = {Springer-Verlag New York, Inc.},
 address = {New York, NY, USA}
 }
 
-@techreport{Chakravarty:2009uo,
-author = {Chakravarty, Manuel M T},
-title = {{Converting a HOAS term GADT into a de Bruijn term GADT}},
-year = {2009}
+@techreport{Appel:1994ws,
+author = {Appel, Andrew W and Jim, Trevor},
+title = {{Making Lambda Calculus Smaller, Faster}},
+year = {1994},
+number = {CS-TR-477-94},
+month = nov
 }
 
 @inproceedings{Jones:2009,
@@ -690,7 +696,7 @@ annote = {Describes ThreadScope and its use to improve the performance of semi-i
 }
 
 @inproceedings{Lippmeier:2012vv,
-author = {Ben Lippmeier and Chakravarty, Manuel and Keller, Gabriele and Jones, Simon Peyton},
+author = {Lippmeier, Ben and Chakravarty, Manuel M T and Keller, Gabriele and Jones, Simon Peyton},
 title = {{Guiding parallel array fusion with indexed types}},
 booktitle = {Haskell '12: Proceedings of the 2012 symposium on Haskell symposium},
 year = {2013},
@@ -744,6 +750,12 @@ year = {2004},
 editor = {Girod, Bernd and Magnor, Marcus Andreas and Seidel, Hans-Peter},
 pages = {255--262},
 month = nov
+}
+
+@techreport{Chakravarty:2009uo,
+author = {Chakravarty, Manuel M T},
+title = {{Converting a HOAS term GADT into a de Bruijn term GADT}},
+year = {2009}
 }
 
 @article{McCool:2004,
@@ -861,6 +873,7 @@ annote = {Platform developed by intel to program heterogenous environments consi
 author = {Blelloch, Guy E.},
 title = {{Prefix Sums and Their Applications}},
 year = {1990},
+number = {CMU-CS-90-190},
 month = nov
 }
 
@@ -883,6 +896,15 @@ year = {2008},
 volume = {7},
 number = {10},
 pages = {4598--4602}
+}
+
+@article{Cole:2012ww,
+author = {Cole, Alex and McEwan, Alistair and Mainland, Geoffrey},
+title = {{Beauty and the Beast: Exploting GPUs in Haskell}},
+journal = {Communicating Process Architectures},
+year = {2012},
+pages = {121--134},
+month = aug
 }
 
 @book{Plasmeijer:2002,
@@ -1064,6 +1086,19 @@ month = sep,
 annote = {Vertigo, an embedded functional graphics language in Haskell.}
 }
 
+@article{Laemmel:2002wj,
+author = {Laemmel, Ralf},
+title = {{Typed Generic Traversal With Term Rewriting Strategies}},
+journal = {arXiv.org},
+year = {2002},
+eprint = {cs/0205018v2},
+eprinttype = {arxiv},
+eprintclass = {cs.PL},
+month = may,
+annote = {85 pages, submitted for publication to the Journal of Logic and
+  Algebraic Programming}
+}
+
 @article{Olukotun:2005,
 author = {Olukotun, Kunle and Hammond, Lance},
 title = {{The Future of Microprocessors}},
@@ -1111,7 +1146,7 @@ address = {Aire-la-Ville, Switzerland, Switzerland},
 annote = {A polynomial-time algorithm for partitioning fragment shaders into multiple phases. Find near-optimal partitions for a number of shaders on architectures with different resources limitations and different cost models. Could be applicable for my work.}
 }
 
-@book{Chatterjee:2009,
+@book{Chatterjee:2009vh,
 author = {Chatterjee, Siddhartha and Prins, Jan},
 title = {{COMP663: Parallel Computing Algorithms}},
 publisher = {Department of Computer Science, University of North Carolina at Chapel Hill},
@@ -1447,6 +1482,22 @@ month = oct,
 url = {http://blogs.intel.com/research/2007/10/the_problem_with_gpgpu.php}
 }
 
+@phdthesis{Anderson:2008vz,
+author = {Anderson, Owen C},
+title = {{Compiler Optimizations for a Time-constrained Environment}},
+school = {Macalester College},
+year = {2008},
+month = apr
+}
+
+@inproceedings{Rose:1987,
+author = {Rose, J. and Steele Jr, Guy L},
+title = {{C*: An extended C language for data parallel programming}},
+booktitle = {Proceedings of the Second International Conference on Supercomputing},
+year = {1987},
+pages = {2--16}
+}
+
 @article{Rafler:2011ui,
 author = {Rafler, Stephan},
 title = {{Generalization of Conway's "Game of Life" to a continuous domain - SmoothLife}},
@@ -1458,19 +1509,15 @@ eprintclass = {nlin.CG},
 month = nov
 }
 
-@inproceedings{Rose:1987,
-author = {Rose, J. and Steele Jr, Guy L},
-title = {{C*: An extended C language for data parallel programming}},
-booktitle = {Proceedings of the Second International Conference on Supercomputing},
-year = {1987},
-pages = {2--16}
-}
-
-@techreport{Allen:2005,
-author = {Allen, Eric and Chase, David and Hallett, Joe and Luchangco, Victor and Maessen, Jan-Willem and Ryu, Sukyoung and Steele Jr, Guy L and Tobin-Hochstadt, Sam and Dias, Joao and Eastlund, Carl and Flood, Christine and Lev, Yossi and McCosh, Cheryl},
-title = {{The Fortress language specification, v1.0$\beta$}},
-year = {2005},
-month = mar
+@article{Duke:2012df,
+author = {Duke, David and Carr, Hamish and Knoll, Aaron and Schunck, Nicolas and Nam, Hai Ah and Staszczak, Andrzej},
+title = {{Visualizing Nuclear Scission through a Multifield Extension of Topological Analysis}},
+journal = {IEEE Transactions on Visualization and Computer Graphics},
+year = {2012},
+volume = {18},
+number = {12},
+pages = {2033--2040},
+month = dec
 }
 
 @inproceedings{Takano:1995,
@@ -1483,6 +1530,13 @@ month = oct,
 annote = {Automatic program transformations to remove unnecessary intermediate data structures (deforestation). States that the technique is applicable for any functional program in function composition style, for any algebraic data type. Seems to generalise the foldr/build rule and its dual, and can be extended to work on primitive recursion.}
 }
 
+@techreport{Allen:2005,
+author = {Allen, Eric and Chase, David and Hallett, Joe and Luchangco, Victor and Maessen, Jan-Willem and Ryu, Sukyoung and Steele Jr, Guy L and Tobin-Hochstadt, Sam and Dias, Joao and Eastlund, Carl and Flood, Christine and Lev, Yossi and McCosh, Cheryl},
+title = {{The Fortress language specification, v1.0$\beta$}},
+year = {2005},
+month = mar
+}
+
 @article{Owens:2007,
 author = {Owens, John D and Luebke, David and Govindaraju, Naga and Harris, Mark and ger, Jens Kr u and Lefohn, Aaron E and Purcell, Timothy J},
 title = {{A Survey of General-Purpose Computation on Graphics Hardware}},
@@ -1492,6 +1546,14 @@ volume = {26},
 number = {1},
 pages = {80--113},
 annote = {Updated version of the original 2005 survey by the same name.}
+}
+
+@techreport{Emoto:2012ur,
+author = {Emoto, Kento and Matsuzaki, Kiminori},
+title = {{An Automatic Fusion Mechanism for Variable-Length List Skeletons in SkeTo}},
+year = {2012},
+number = {METR 2013-04},
+month = feb
 }
 
 @article{Hussong:2009,
@@ -1553,14 +1615,6 @@ year = {2005},
 pages = {243},
 publisher = {ACM},
 address = {New York, NY, USA}
-}
-
-@inproceedings{YuanchengLuo:bs,
-author = {Yuancheng Luo and Duraiswami, Ramani},
-title = {{Canny edge detection on NVIDIA CUDA}},
-booktitle = {2008 IEEE Computer Society Conference on Computer Vision and Pattern Recognition Workshops (CVPR Workshops)},
-pages = {1--8},
-publisher = {IEEE}
 }
 
 @article{Styczynski:2008,
@@ -1714,6 +1768,15 @@ month = nov,
 annote = {Generate a measure of similarity between a measured tandem-MS spectrum and a peptide sequence from a protein database by way of calculating the cross-correlation between the measured and (theoretical) peptide spectra. The cross-correlation analysis is computationally expensive, and so the list of candidates to test is pruned by a first metric. Also limited accuracy when searching for short peptide sequences(?) Speed addressed in the subsequent SEQUEST paper.}
 }
 
+@inproceedings{Luo:2008bs,
+author = {Luo, Yuancheng and Duraiswami, Ramani},
+title = {{Canny edge detection on NVIDIA CUDA}},
+booktitle = {2008 IEEE Computer Society Conference on Computer Vision and Pattern Recognition Workshops (CVPR Workshops)},
+year = {2008},
+pages = {1--8},
+publisher = {IEEE}
+}
+
 @book{Blelloch:1990ts,
 author = {Blelloch, Guy E.},
 title = {{Vector Models for Data-Parallel Computing}},
@@ -1727,6 +1790,14 @@ title = {{OpenMP Application Program Interface, v3.0}},
 author = {{OpenMP Architecture Review Board}},
 month = may,
 year = {2008}
+}
+
+@book{HoTT:2013wt,
+author = {{HoTT}},
+title = {{Homotopy Type Theory: Univalent Foundations of Mathematics}},
+publisher = {The Univalent Foundations Program Institute for Advanced Study},
+year = {2013},
+month = jun
 }
 
 @inproceedings{Jones:2008a,
@@ -1752,6 +1823,13 @@ month = mar,
 annote = {Describes the role and procedure of mass spectrometry-based proteomics as a tool for molecular and cellular biology. Compares commonly used methods/systems and their relative strengths and weaknesses.}
 }
 
+@book{Anonymous:2005vl,
+title = {{link.springer.com}},
+publisher = {Springer Berlin Heidelberg},
+year = {2005},
+address = {Berlin, Heidelberg}
+}
+
 @article{Blelloch:1993ts,
 author = {Blelloch, Guy E. and Heroux, Michael A. and Zagha, Marco},
 title = {{Segmented operations for sparse matrix computation on vector multiprocessors}},
@@ -1768,16 +1846,6 @@ month = nov,
 annote = {Similar to Jones:2008, draws together the work of many previous papers. Covers topics in more detail, instead of providing a large running example/motivation, and includes a discussion of stream fusion, omitted from the later work. Aims to describe the language and implementation of nested data parallelism in Haskell, with a broad high-level scope. Doesn't really discuss limitations of the system, as the goal is to present the current state of the implementation -- algorithm discussions can be found in the more detailed papers upon which the system is based.}
 }
 
-@inproceedings{Satish:2009kx,
-author = {Satish, Nadathur and Harris, Mark and Garland, Michael},
-title = {{Designing efficient sorting algorithms for manycore GPUs}},
-booktitle = {IPDPS '09: Proceedings of the 2009 IEEE International Symposium on Parallel{\&}Distributed Processing},
-year = {2009},
-pages = {1--10},
-publisher = { IEEE Computer Society},
-month = may
-}
-
 @inproceedings{Chakravarty:2001gz,
 author = {Chakravarty, Manuel M T and Keller, Gabriele and Leshtchinsky, Roman and Pfannenstiel, Wolf},
 title = {{Nepal -- Nested Data Parallelism in Haskell}},
@@ -1789,6 +1857,16 @@ publisher = {Springer-Verlag},
 annote = {Discusses a possible implementation of nested data-parallelism in Haskell (as an extension). Data parallelism restricts parallelism to the application of a single function to all elements of a collective structure. The authors argue that compared to control parallelism, this allows the programmer and compiler to better predict the parallel behaviour of a program, which ultimately allows for finer parallel granularity and allows for more radical compiler optimisations. The programming model is also closer to sequential programming, and arguably easier to understand. Extends NESL (Blelloch et. al.) to support user-defined recursive and sum types, and also benefits from other features of Haskell (I/O, type system, standardised language, etc...) Parallel and sequential structures are distinguished through the type system.}
 }
 
+@inproceedings{Satish:2009kx,
+author = {Satish, Nadathur and Harris, Mark and Garland, Michael},
+title = {{Designing efficient sorting algorithms for manycore GPUs}},
+booktitle = {IPDPS '09: Proceedings of the 2009 IEEE International Symposium on Parallel{\&}Distributed Processing},
+year = {2009},
+pages = {1--10},
+publisher = { IEEE Computer Society},
+month = may
+}
+
 @inproceedings{Gill:2009dx,
 author = {Gill, Andy},
 title = {{Type-Safe Observable Sharing in Haskell}},
@@ -1796,6 +1874,12 @@ booktitle = {Proceedings of the 2009 ACM SIGPLAN Haskell Symposium},
 year = {2009},
 pages = {117--128},
 month = sep
+}
+
+@inproceedings{Lippmeier:WZGJsUgV,
+author = {Lippmeier, Ben and Chakravarty, Manuel M T and Keller, Gabriele and Robinson, Amos},
+title = {{Data Flow Fusion with Series Expressions in Haskell}},
+booktitle = {Haskell '13: Proceedings of the 2013 symposium on Haskell}
 }
 
 @book{OpenCL:2009,
@@ -1827,6 +1911,14 @@ pages = {325--335},
 annote = {A C\{\#} library of abstractions for data-parallel arrays and operations that allows programmers to combine operations for the CPU and GPU within a single application. To improve efficiency, the library uses a graph-based lazy evaluation strategy of data-parallel operations on the GPU. Evaluation is typically triggered by the explicit conversion of an array from a data-parallel to a serial representation.}
 }
 
+@techreport{Blelloch:1995ut,
+author = {Blelloch, Guy E.},
+title = {{NESL: A Nested Data-Parallel Language}},
+year = {1995},
+number = {CMU-CS-95-170},
+month = sep
+}
+
 @book{Gibbons:1988,
 author = {Gibbons, Alan and Rytter, Wojciech},
 title = {{Efficient parallel algorithms}},
@@ -1842,6 +1934,14 @@ year = {2005},
 pages = {21--51},
 month = aug,
 annote = {Comprehensive survey paper of the (then) current features and limitations of graphics hardware in the context of their use for general purpose computation. Discussion of the differences between CPU and GPU hardware and software programming models, and methods to improve flow control. Includes many examples of algorithms and applications which are well categorised, with evolution of algorithms/methods as additional programmability was introduced. GPGPU techniques discussed include: * stream operations (map, reduce, scatter/gather, sort, search, filter) * data structures (dense/sparse, static/dynamic) * Differential equations and linear algebra}
+}
+
+@manual{PTX:2012,
+title = {{Parallel Thread Execution ISA}},
+author = {{NVIDIA}},
+edition = {3.1},
+month = sep,
+year = {2012}
 }
 
 @techreport{Nikhil:1993,
@@ -1902,6 +2002,16 @@ publisher = {ACM},
 address = {New York, NY, USA}
 }
 
+@incollection{McBride:2005jv,
+author = {McBride, Conor},
+title = {{Epigram: Practical Programming with Dependent Types}},
+booktitle = {Lecture Notes in Computer Science},
+year = {2005},
+pages = {130--170},
+publisher = {Springer Berlin Heidelberg},
+address = {Berlin, Heidelberg}
+}
+
 @inproceedings{Keller:1998fx,
 author = {Keller, Gabriele and Chakravarty, Manuel M T},
 title = {{Flattening Trees}},
@@ -1934,24 +2044,11 @@ address = {New York, NY, USA},
 annote = {Present an analysis of dense matrix-matrix multiplication, and find that even though the algorithm has regular data access patterns and highly parallel computational requirements, the lack of high bandwidth access to cached data will impair performance and limit the types of applications that will benefit from the computational power available from these architectures.}
 }
 
-@book{Anonymous:MN3zTyWw,
-title = {{Advanced Functional Programming}},
-publisher = {Springer Berlin / Heidelberg}
-}
-
 @techreport{Bonachea:2006,
 author = {Hilfinger, Paul N. and Bonachea, Dan and Datta, Kaushik and Gay, David and Graham, Susan and Kamil, Amir and Liblit, Ben and Pike, Geoff and Su, Jimmy and Yelick, Katherine},
 title = {{Titanium Language Reference Manual, v2.20}},
 year = {2006},
 month = aug
-}
-
-@webpage{Kanter:2008,
-author = {Kanter, David},
-title = {{NVIDIA's GT200: Inside a Parallel Processor}},
-year = {2008},
-month = aug,
-url = {http://www.realworldtech.com/page.cfm?ArticleID=RWT090808195242}
 }
 
 @techreport{Ghuloum:2007,
@@ -1962,6 +2059,14 @@ month = apr,
 annote = {Data-parallel programming platform under development by Intel that targets x86 multicore CPUs. Supports the SPMD stream programming model and uses an embedded C++ interface. Includes an implementation of segmented collectives, which are especially useful for algorithms using nested data parallelism.}
 }
 
+@webpage{Kanter:2008,
+author = {Kanter, David},
+title = {{NVIDIA's GT200: Inside a Parallel Processor}},
+year = {2008},
+month = aug,
+url = {http://www.realworldtech.com/page.cfm?ArticleID=RWT090808195242}
+}
+
 @inproceedings{Coutts:2007ia,
 author = {Coutts, Duncan and Stewart, Don and Leshchinskiy, Roman},
 title = {{Rewriting Haskell strings}},
@@ -1969,18 +2074,6 @@ booktitle = {Practical Aspects of Declarative Languages 8th International Sympos
 year = {2007},
 pages = {50--64},
 publisher = {Springer-Verlag}
-}
-
-@book{Prins:1998,
-author = {Prins, Jan F. and Chatterjee, Siddhartha and Simons, Martin},
-editor = {O'Hallaron, David R},
-title = {{Lecture Notes in Computer Science}},
-publisher = {Springer Berlin Heidelberg},
-year = {2002},
-volume = {1511},
-series = {Lecture Notes in Computer Science},
-address = {Berlin, Heidelberg},
-month = sep
 }
 
 @inproceedings{Seiler:2008,
@@ -2032,15 +2125,10 @@ publisher = {ACM},
 address = {New York, NY, USA}
 }
 
-@book{Matsuzaki:2004,
-author = {Matsuzaki, Kiminori and Kakehi, Kazuhiko and Iwasaki, Hideya and Hu, Zhenjiang and Akashi, Yoshiki},
-editor = {Hutchison, David and Kanade, Takeo and Kittler, Josef and Kleinberg, Jon M and Mattern, Friedemann and Mitchell, John C and Naor, Moni and Nierstrasz, Oscar and Pandu Rangan, C and Steffen, Bernhard and Sudan, Madhu and Terzopoulos, Demetri and Tygar, Dough and Vardi, Moshe Y and Weikum, Gerhard and Danelutto, Marco and Vanneschi, Marco and Laforenza, Domenico},
-title = {{Lecture Notes in Computer Science}},
-publisher = {Springer Berlin Heidelberg},
-year = {2004},
-volume = {3149},
-series = {DavidHutchisonTakeoKanadeJosefKittlerJon M.KleinbergFriedemannMatternJohn C.MitchellMoniNaorOscarNierstraszC.Pandu RanganBernhardSteffenMadhuSudanDemetriTerzopoulosDoughTygarMoshe Y.VardiGerhardWeikumLecture Notes in Computer Science0302-97431611-3349},
-address = {Berlin, Heidelberg}
+@techreport{HLSL:2009,
+author = {{Microsoft Corporation}},
+title = {{DirectX High--Level Shading Language, v10}},
+year = {2009}
 }
 
 @inproceedings{Charles:2005,
@@ -2151,15 +2239,10 @@ number = {6},
 pages = {679--698}
 }
 
-@techreport{HLSL:2009,
-author = {{Microsoft Corporation}},
-title = {{DirectX High--Level Shading Language, v10}},
-year = {2009}
-}
-
-@booklet{Chatterjee:2009,
-title = {{COMP663: Parallel Computing Algorithms}},
-year = {2009}
+@techreport{CUDA:2008,
+author = {{NVIDIA}},
+title = {{CUDA: Compute Unified Device Architecture, v2.0}},
+year = {2008}
 }
 
 @article{Blelloch:1994vc,
@@ -2171,35 +2254,6 @@ volume = {21},
 number = {1},
 pages = {4--14},
 annote = {Implementation details of the NESL nested data-parallel language. c.f. Blelloch:1996 Performance comparison for a number of different hardware architectures. Achieves aim of concise description of parallel algorithms, relies on automatically flattening nested data. Demonstrates good performance and concise description for irregular data structures (a specific aim), although somewhat irrelevant now due to changing hardware (no vector/super computer architectures in large use anymore, no limitations for dynamic memory management as in F77).}
-}
-
-@techreport{CUDA:2008,
-author = {{NVIDIA}},
-title = {{CUDA: Compute Unified Device Architecture, v2.0}},
-year = {2008}
-}
-
-@book{Veldhuizen:1998,
-author = {Veldhuizen, Todd L.},
-editor = {Caromel, Denis and Oldehoeft, Rodney R and Tholburn, Marydell},
-title = {{Lecture Notes in Computer Science}},
-publisher = {Springer Berlin Heidelberg},
-year = {2002},
-volume = {1505},
-series = {Lecture Notes in Computer Science},
-address = {Berlin, Heidelberg},
-month = aug
-}
-
-@book{Sato:2009,
-author = {Sato, Shigeyuki and Iwasaki, Hideya},
-editor = {Hutchison, David and Kanade, Takeo and Kittler, Josef and Kleinberg, Jon M and Mattern, Friedemann and Mitchell, John C and Naor, Moni and Nierstrasz, Oscar and Pandu Rangan, C and Steffen, Bernhard and Sudan, Madhu and Terzopoulos, Demetri and Tygar, Doug and Vardi, Moshe Y and Weikum, Gerhard and Hu, Zhenjiang},
-title = {{Lecture Notes in Computer Science}},
-publisher = {Springer Berlin Heidelberg},
-year = {2009},
-volume = {5904},
-series = {DavidHutchisonTakeoKanadeJosefKittlerJon M.KleinbergFriedemannMatternJohn C.MitchellMoniNaorOscarNierstraszC.Pandu RanganBernhardSteffenMadhuSudanDemetriTerzopoulosDougTygarMoshe Y.VardiGerhardWeikumLecture Notes in Computer Science0302-97431611-3349},
-address = {Berlin, Heidelberg}
 }
 
 @booklet{Blelloch:1990a,
@@ -2230,14 +2284,20 @@ pages = {1526--1538}
 }
 
 @article{Filipovic:_b2q1-zX,
-author = {Filipovic, Jir{\'\i} and Madzin, Mat{\'u}s and Fousek, Jan and Matysaka, Ludek},
-title = {{Optimising CUDA Code by Kernel Fusion --- Application on BLAS}}
+author = {Filipovic, Jir{\'\i} and Madzin, Mat{\'u}s and Fousek, Jan and Matyska, Ludek},
+title = {{Optimizing CUDA Code By Kernel Fusion---Application on BLAS}},
+journal = {arXiv.org},
+year = {2013},
+eprint = {1305.1183v1},
+eprinttype = {arxiv},
+eprintclass = {cs.DC},
+month = may
 }
 
 @inproceedings{McDonell:2013wi,
 author = {McDonell, Trevor L. and Chakravarty, Manuel M T and Keller, Gabriele and Lippmeier, Ben},
 title = {{Optimising Purely Functional GPU Programs}},
-booktitle = {ICFP '12: Proceedings of the 17th ACM SIGPLAN international conference on Functional programming},
+booktitle = {ICFP '13: Proceedings of the 18th ACM SIGPLAN international conference on Functional programming},
 year = {2013},
 month = sep
 }
@@ -2420,14 +2480,16 @@ number = {7},
 pages = {3581--3591}
 }
 
-@article{Anonymous:5MPT6ozW,
-title = {{CGO2012-6}}
+@proceedings{Brown:5MPT6ozW,
+title = {{Delite}}
 }
 
-@article{Svensson:tl,
+@article{Svensson:2012tl,
 author = {Svensson, Joel Bo and Newton, Ryan},
-title = {{Programming Future Parallel Architectures with Haskell and Intel ArBB}},
-journal = {faspp.ac.upc.edu}
+title = {{Parallel programming in Haskell almost for free: an embedding of intel's array building blocks}},
+journal = {Proceedings of the 1st ACM SIGPLAN workshop on Functional high-performance computing},
+year = {2012},
+pages = {3--14}
 }
 
 @article{Svenningsson:2002ws,
@@ -2451,17 +2513,18 @@ journal = {ICFP '05: Proceedings of the tenth ACM SIGPLAN international conferen
 year = {2005}
 }
 
-@article{Harper:2012vb,
+@inproceedings{Harper:2012vb,
 author = {Harper, Thomas},
 title = {{A library writer's guide to shortcut fusion}},
-journal = {Haskell '11: Proceedings of the 4th ACM symposium on Haskell},
-year = {2012}
+booktitle = {Haskell '11: Proceedings of the 4th ACM symposium on Haskell},
+year = {2012},
+publisher = { ACM  Request Permissions},
+month = jan
 }
 
 @article{Launchbury:2000vu,
 author = {Launchbury, John and 'c, Sava Krsti and Sauerwein, Timothy E},
-title = {{Zip Fusion with Hyperfunctions}},
-journal = {Citeseer},
+title = {{Zip fusion with hyperfunctions}},
 year = {2000}
 }
 
